--- a/buckaroo.toml
+++ b/buckaroo.toml
@@ -1,6 +1,10 @@
 targets = [ "//:function" ]
 
 [[dependency]]
+package = "github.com/buckaroo-pm/boost-bind"
+version = "branch=master"
+
+[[dependency]]
 package = "github.com/buckaroo-pm/boost-integer"
 version = "branch=master"
 
